--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 .DS_Store
 
 # Project files
-prefab2pngdev.py
-output/
---no-mask output/
+output*/
+heatmap/
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
